--- a/albumes.html
+++ b/albumes.html
@@ -20,7 +20,7 @@
 <body>
     <nav>
         <img id="logo" src="css/assets/fficon.png" alt="Logo">
-        <p><a href="main.html">VOLVER</a></p>
+        <p><a href="index.html">VOLVER</a></p>
     </nav>
 
     <section class="main">
